@startuml Diagramme_Classe_StoreManager


class Utilisateur {
    - id : int
    - nomComplet : String
    - email : String
    - mot_passe : String
    - adresse : String
    - tel : String
}

class Role {
    - id : int
    - nom : String
}



class Client {
    - id : int
    - nom : String
    - prenom : String
    - email : String
    - tel : String
    - limiteCredit : float
}



class Commande {
    - id : int
    - dateCommande : Date
    - montantInitial : float
    - avance : float
}


class LigneCommande {
    - id : int
    - qteCommande : int
    - prixReel : float
}


class ModePaiement {
    - id : int
    - mode : String
}

class Reglement {
    - id : int
    - date : Date
    - montant : float
}


class Dette {
    - id : int
    - montantInitial : float
    - montantPaye : float
    - resteDu : float
    - statut : String
    - dateCreation : Date

   
}



class Produit {
    - id : int
    - libelle : String
    - prixVente : float
    - stockInitial : int
}


class Fournisseur {
    - id : int
    - nom : String
    - email : String
    - tel : String
    - adresse : String
}


class StatutAppro {
    - id : int
    - nom : String
}

class Appro {
    - id : int
    - refBl : String
    - dateAppro : Date
}

class LigneAppro {
    - id : int
    - qteAppro : int
    - qteRecu : int
    - prixReel : float
}



Role "1" <-- "0..*" Utilisateur 


Client "1" --> "0..*" Commande 



Commande "1" *-- "1..*" LigneCommande 

Produit "1" --> "0..*" LigneCommande 


Utilisateur "1" <-- "0..*" Commande 


Commande "1" --> "0..1" Dette 

Client "1" --> "0..*" Dette 


Dette "1" *-- "0..*" Reglement 


ModePaiement "1" <-- "0..*" Reglement 



Fournisseur "1" <-- "0..*" Appro 



Appro "1" *-- "1..*" LigneAppro 

Produit "1" --> "0..*" LigneAppro 


StatutAppro "1" <-- "0..*" Appro 


Utilisateur "1" <-- "0..*" Appro 


@enduml